introduced middleware for router and publick key in car-service
